--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
 language: python
+python: 3.6
+
+before_install:
+  # make depends on poetry
+  - pip install poetry
+
+install:
+  - make install
+
+script:
+  - make check
