--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Alex_Gorn"]
 packages = [{ include = "brain_games" },]
 
 [tool.poetry.dependencies]
-python = "^3.6.*"
+python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 
