--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Gornalas_brain_games"
-version = "0.1.7"
+version = "0.1.8"
 description = ""
 authors = ["Alex_Gorn"]
 packages = [{ include = "brain_games" },]
@@ -15,6 +15,7 @@ prompt = "^0.4.1"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
